[FEAT][#70] 파트너 연결 끊기

--- a/Yomang/Resources/Localization/ko.lproj/Localizable.strings
+++ b/Yomang/Resources/Localization/ko.lproj/Localizable.strings
@@ -19,5 +19,5 @@
 "button-my-profile" = "내 계정";
 
 "header-title-my-usage" = "내 사용";
-"button-connect-partner" = "파트너 연결";
+"button-connect-partner" = "파트너 연결 끊기";
 "button-setting-notification" = "알림 설정";
